--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,14 +1,18 @@
 [buildout]
+parts = test coverage py 
 develop = .
-parts = test
-versions = versions
 
 [test]
 recipe = zc.recipe.testrunner
-eggs = birdhousebuilder.recipe.celery [tests]
+eggs = collective.recipe.supervisor[test]
 defaults = ['--auto-color', '--auto-progress']
 
-[versions]
-zc.buildout = 1.7.1
-distribute = 0.6.28
-setuptools = 0.6c11
+[coverage]
+recipe = zc.recipe.testrunner
+eggs = ${test:eggs}
+defaults = ['--coverage', '../../coverage', '-v', '--auto-progress']
+
+[py]
+recipe = zc.recipe.egg
+eggs = ${test:eggs}
+interpreter = py
