--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,6 @@ var/
 .installed.cfg
 *.egg
 bin/
-*.*~
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -57,3 +56,6 @@ docs/_build/
 
 # PyBuilder
 target/
+
+# Emacs
+*.*~
