update travis and buildout

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,18 +1,14 @@
 [buildout]
-parts = test coverage py 
+extends = versions.cfg
+versions = versions
+show-picked-versions = true
+parts = test
+
 develop = .
 
 [test]
 recipe = zc.recipe.testrunner
-eggs = collective.recipe.supervisor[test]
-defaults = ['--auto-color', '--auto-progress']
+eggs = birdhousebuilder.recipe.celery [tests]
 
-[coverage]
-recipe = zc.recipe.testrunner
-eggs = ${test:eggs}
-defaults = ['--coverage', '../../coverage', '-v', '--auto-progress']
 
-[py]
-recipe = zc.recipe.egg
-eggs = ${test:eggs}
-interpreter = py
+
